# create-protocol-plugin

./: Cargo.toml  README.md  README.tpl
src/: addprotocol.rs  createcrate.rs  main.rs  utils.rs
templates/: build.rs  default.proto  dependencies.txt  lib.rs  schema_interface.rs
