[package]
name = "cargo-createprotocolplugin"
version = "0.0.1"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
repository = "https://github.com/zutils/createprotocolplugin"
keywords = ["protocol", "cargo"]
categories = ["Parser implementations", "Command line utilities", "Rust patterns", "template-engine"]
description = "A Rust cargo subcommand that will create initial library code for the protocolplugin crate. "
readme = "./README.md"
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.32.0"
failure = "0.1.2"
