[package]
name = "cargo-create-protocols-plugin"
version = "0.0.1"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
repository = "https://github.com/zutils/create-protocols-plugin"
keywords = ["protocol", "cargo"]
categories = ["Parser implementations", "Command line utilities", "Rust patterns", "template-engine"]
description = "A Rust cargo subcommand that will create initial library code for the protocols crate. "
readme = "./README.md"
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.32.0"
failure = "0.1.2"
